--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,9 @@
     ~/.gitconfig: gitconfig
     ~/.vim: vim
     ~/.vimrc: vimrc
+    ~/.zshrc: zshrc
+    ~/.oh-my-zsh: oh-my-zsh
+    ~/.p10k.zsh: p10k.zsh
 
 - create:
     - ~/.vim/undodir
